# timer-engine

./: .clang-format  CLAUDE.md  CMakeLists.txt  TIMER_WHEEL_SUMMARY.md  format.sh  run_bench.sh  run_bench_mem.sh  run_tests.sh
bench/: CMakeLists.txt  bench_mem.cpp  bench_timer.cpp
src/: timer_pool.h  timer_wheel.cpp  timer_wheel.h
test/: CMakeLists.txt  test_timer.cpp
